# Camera2D

./: .gitignore  CMakeLists.txt  README.md  connectwindow.cpp  mainwindow.cpp
rsc/: ressources.qrc
src/alliedvision/: CMakeLists.txt  alliedvision.cpp  alliedvision.h
src/app/: CMakeLists.txt  cameramanager.cpp  cameramanager.h  camloader.cpp  camloader.h  connectwindow.cpp  connectwindow.h  exportwindow.cpp  exportwindow.h  fit.cpp  fit.h  gldisplay.cpp  gldisplay.h  icamera.h  iconres.rc  main.cpp  mainwindow.cpp  mainwindow.h  memorymanager.cpp  memorymanager.h  mychart.cpp  mychart.h  shaders.qrc  workerfit.cpp  workerfit.h
src/app/shd/: shader.frag  shader.vert
src/levmar-2.5/: CMakeLists.txt  levmar.h  test_fit_gaussian.cpp
src/mightex/: CMakeLists.txt  mightex.cpp  mightex.h
src/mightex/dlls/x64/: MT_USBCamera_SDK.lib
src/thorlabs/: CMakeLists.txt  thorcam.cpp  thorcam.h  thorlabs.cpp  thorlabs.h
